--- a/overlay/frameworks/base/core/res/res/values/pa_config.xml
+++ b/overlay/frameworks/base/core/res/res/values/pa_config.xml
@@ -31,55 +31,28 @@
          config to 7. -->
     <integer name="config_deviceHardwareKeys">19</integer>
 
-    <!-- Keycodes of gestures. If the gesture is not supported set it to 0. -->
-    <integer name="config_doubleTapKeyCode">59</integer>
-
-    <integer name="config_drawOKeyCode">60</integer>
-
-    <integer name="config_twoFingerSwipeKeyCode">61</integer>
-
-    <integer name="config_drawVKeyCode">62</integer>
-
-    <integer name="config_drawArrowLeftKeyCode">63</integer>
-
-    <integer name="config_drawArrowRightKeyCode">64</integer>
-
-    <integer name="config_drawInverseVKeyCode">65</integer>
-
-    <integer name="config_oneFingerSwipeLeftKeyCode">66</integer>
-
-    <integer name="config_oneFingerSwipeRightKeyCode">67</integer>
-
-    <integer name="config_drawMKeyCode">68</integer>
-
-    <integer name="config_drawWKeyCode">87</integer>
-
-    <integer name="config_oneFingerSwipeUpKeyCode">88</integer>
-
-    <integer name="config_oneFingerSwipeDownKeyCode">183</integer>
-
-    <!-- Default settings for gestures
-            0 - Disabled
-            1 - Wake device
-            2 - Toggle flashlight
-            3 - Toggle airplane mode
-            4 - Play/Pause music
-            5 - Next music
-            6 - Previous music
-            7 - Open camera
-            8 - Open dialer -->
-    <integer name="config_doubleTapDefault">1</integer>
-
-    <integer name="config_drawVDefault">2</integer>
-
-    <integer name="config_drawODefault">7</integer>
-
-    <integer name="config_drawArrowLeftDefault">6</integer>
-
-    <integer name="config_drawArrowRightDefault">5</integer>
-
-    <!-- Whether to intercept inputs on screen off -->
-    <bool name="config_enableKeyHandler">true</bool>
+    <!-- Control the behavior when the user long presses or double taps one of the below keys.
+            0 - Nothing
+            1 - Menu key
+            2 - Recent apps view in SystemUI
+            3 - Launch assist intent
+            4 - Voice search
+            5 - In-app search
+            6 - Launch camera
+            7 - Launch last app
+            8 - Split screen
+         This needs to match the constants in
+         services/core/java/com/android/server/policy/PhoneWindowManager.java
+    -->
+    <!-- home -->
+    <integer name="config_longPressOnHomeKeyBehavior">3</integer>
+    <integer name="config_doubleTapOnHomeKeyBehavior">6</integer>
+    <!-- back -->
+    <integer name="config_longPressOnBackKeyBehavior">0</integer>
+    <integer name="config_doubleTapOnBackKeyBehavior">0</integer>
+    <!-- app switch -->
+    <integer name="config_longPressOnAppSwitchKeyBehavior">8</integer>
+    <integer name="config_doubleTapOnAppSwitchKeyBehavior">7</integer>
 
     <!-- Whether device has fysical tri state switch -->
     <bool name="config_hasAlertSlider">true</bool>
@@ -87,50 +60,84 @@
     <!-- Whether device has dash charging support -->
     <bool name="config_hasDashCharger">true</bool>
 
-  <!-- Extended Boosts for QPerformance -->
+    <!-- Extended Boosts for QPerformance -->
 
-  <!-- Whether cpu boost is enabled right after boot -->
-   <bool name="config_enableCpuBoostOnBoot">true</bool>
+    <!-- Whether cpu boost is enabled right after boot -->
+    <bool name="config_enableCpuBoostOnBoot">true</bool>
 
-  <!-- Boost parameters which get passed to QPerformance -->
-   <integer-array name="onbootboost_param_value">
+    <!-- Boost parameters which get passed to QPerformance -->
+    <integer-array name="onbootboost_param_value">
        <item>0x40C00000</item> <!-- SCHEDBOOST resource opcode-->
        <item>0x1</item>        <!-- SCHEDBOOST resource value-->
        <item>0x40800100</item> <!-- CPUBOOST_MIN_FREQ LITTLE Core resource opcode -->
        <item>0x6A4</item>      <!-- CPUBOOST MIN_FREQ resource value -->
        <item>0x40800000</item> <!-- CPUBOOST_MIN_FREQ BIG CORE resource opcode -->
        <item>0x7D0</item>      <!-- CPUBOOST MIN_FREQ resource value -->
-   </integer-array>
+    </integer-array>
 
-   <!-- Whether Keypress Boost is enabled -->
-   <bool name="config_enableKeypressBoost">true</bool>
+    <!-- Whether Keypress Boost is enabled -->
+    <bool name="config_enableKeypressBoost">true</bool>
 
-   <!-- Boost parameters which get passed to QPerformance -->
-   <integer-array name="keypressboost_weak_param_value">
-       <item>0x40800100</item> <!-- CPUBOOST_MIN_FREQ LITTLE Core resource opcode -->
-       <item>0x514</item>      <!-- CPUBOOST MIN_FREQ resource value -->
-       <item>0x40800000</item> <!-- CPUBOOST_MIN_FREQ BIG CORE resource opcode -->
-       <item>0x578</item>      <!-- CPUBOOST MIN_FREQ resource value -->
-   </integer-array>
-   <integer-array name="keypressboost_strong_param_value">
-       <item>0x41800000</item> <!-- CPUBW_MIN_FREQ resource opcode-->
-       <item>140</item>        <!-- CPUBW_MIN_FREQ resource value-->
-       <item>0x40800100</item> <!-- CPUBOOST_MIN_FREQ LITTLE Core resource opcode -->
-       <item>0x578</item>      <!-- CPUBOOST MIN_FREQ resource value -->
-       <item>0x40800000</item> <!-- CPUBOOST_MIN_FREQ BIG CORE resource opcode -->
-       <item>0x6A4</item>      <!-- CPUBOOST MIN_FREQ resource value -->
-       <item>0x40400000</item> <!-- PWR_CLPS DIS resource opcode-->
-       <item>0x1</item>        <!-- PWR_CLPS DIS resource value-->
-   </integer-array>
+    <!-- Boost parameters which get passed to QPerformance -->
+    <integer-array name="keypressboost_weak_param_value">
+        <item>0x40800100</item> <!-- CPUBOOST_MIN_FREQ LITTLE Core resource opcode -->
+        <item>0x514</item>      <!-- CPUBOOST MIN_FREQ resource value -->
+        <item>0x40800000</item> <!-- CPUBOOST_MIN_FREQ BIG CORE resource opcode -->
+        <item>0x578</item>      <!-- CPUBOOST MIN_FREQ resource value -->
+    </integer-array>
+    <integer-array name="keypressboost_strong_param_value">
+        <item>0x41800000</item> <!-- CPUBW_MIN_FREQ resource opcode-->
+        <item>140</item>        <!-- CPUBW_MIN_FREQ resource value-->
+        <item>0x40800100</item> <!-- CPUBOOST_MIN_FREQ LITTLE Core resource opcode -->
+        <item>0x578</item>      <!-- CPUBOOST MIN_FREQ resource value -->
+        <item>0x40800000</item> <!-- CPUBOOST_MIN_FREQ BIG CORE resource opcode -->
+        <item>0x6A4</item>      <!-- CPUBOOST MIN_FREQ resource value -->
+        <item>0x40400000</item> <!-- PWR_CLPS DIS resource opcode-->
+        <item>0x1</item>        <!-- PWR_CLPS DIS resource value-->
+    </integer-array>
 
     <!-- Whether FP unlock Boost is enabled
          Depends on Keypress Boost -->
-   <bool name="config_enableFPUnlockBoost">true</bool>
-   <integer name="fpunlockboost_duration">800</integer>
+    <bool name="config_enableFPUnlockBoost">true</bool>
+    <integer name="fpunlockboost_duration">800</integer>
 
-  <!-- sRGB sysfs path -->
-  <string name="config_srgb_path">/sys/class/graphics/fb0/SRGB</string>
+    <!-- sRGB sysfs path -->
+    <string name="config_srgb_path">/sys/class/graphics/fb0/SRGB</string>
 
-  <!-- Internal default to navigation bar value -->
-  <bool name="config_defaultToNavigationBar">false</bool>
+    <!-- Internal default to navigation bar value -->
+    <bool name="config_defaultToNavigationBar">false</bool>
+
+    <!-- Gestures' key codes. If the gesture is not supported set it to 0. -->
+    <integer name="config_doubleTapKeyCode">59</integer>
+    <integer name="config_drawOKeyCode">60</integer>
+    <integer name="config_twoFingerSwipeKeyCode">61</integer>
+    <integer name="config_drawVKeyCode">62</integer>
+    <integer name="config_drawArrowLeftKeyCode">63</integer>
+    <integer name="config_drawArrowRightKeyCode">64</integer>
+    <integer name="config_drawInverseVKeyCode">65</integer>
+    <integer name="config_oneFingerSwipeLeftKeyCode">66</integer>
+    <integer name="config_oneFingerSwipeRightKeyCode">67</integer>
+    <integer name="config_drawMKeyCode">68</integer>
+    <integer name="config_drawWKeyCode">87</integer>
+    <integer name="config_oneFingerSwipeUpKeyCode">88</integer>
+    <integer name="config_oneFingerSwipeDownKeyCode">183</integer>
+
+    <!-- Default settings for gestures
+             0 - Disabled
+             1 - Wake device
+             2 - Toggle flashlight
+             3 - Toggle airplane mode
+             4 - Play/Pause music
+             5 - Next music
+             6 - Previous music
+             7 - Open camera
+             8 - Open dialer -->
+    <integer name="config_doubleTapDefault">1</integer>
+    <integer name="config_drawVDefault">2</integer>
+    <integer name="config_drawODefault">7</integer>
+    <integer name="config_drawArrowLeftDefault">6</integer>
+    <integer name="config_drawArrowRightDefault">5</integer>
+
+    <!-- Whether to intercept inputs on screen off -->
+    <bool name="config_enableKeyHandler">true</bool>
 </resources>
